Start wiretap-like functionality